--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -15,99 +15,72 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
-    <Space
-        android:id="@+id/menu_space_1"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/selection_layout"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
-        app:layout_constraintBottom_toTopOf="@id/wild_encounter_button"
-        app:layout_constraintTop_toBottomOf="@id/main_menu_header_msg"
+        android:layout_height="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/save_button"
+        app:layout_constraintTop_toBottomOf="@id/main_menu_header_msg">
 
     <Button
         android:id="@+id/wild_encounter_button"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_width="125dp"
+        android:layout_height="125dp"
         android:text="@string/wild_encounter_button_string"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/menu_space_1"/>
+        app:layout_constraintLeft_toLeftOf="@id/selection_layout"
+        app:layout_constraintBottom_toBottomOf="@id/selection_layout"
+        app:layout_constraintRight_toLeftOf="@id/trainer_battle_button"
+        app:layout_constraintTop_toBottomOf="@id/change_team_button"/>
 
-    <Space
-        android:id="@+id/menu_space_2"
-        android:layout_width="match_parent"
-        android:layout_height="75dp"
-        app:layout_constraintBottom_toTopOf="@id/trainer_battle_button"
-        app:layout_constraintTop_toBottomOf="@id/wild_encounter_button"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
 
 
     <Button
         android:id="@+id/trainer_battle_button"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_width="125dp"
+        android:layout_height="125dp"
         android:text="@string/trainer_battle_button_string"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/menu_space_2"/>
-
-    <Space
-        android:id="@+id/menu_space_3"
-        android:layout_width="match_parent"
-        android:layout_height="75dp"
-        app:layout_constraintBottom_toTopOf="@id/pokecenter_button"
-        app:layout_constraintTop_toBottomOf="@id/trainer_battle_button"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="@id/selection_layout"
+        app:layout_constraintBottom_toBottomOf="@id/selection_layout"
+        app:layout_constraintLeft_toRightOf="@id/wild_encounter_button"
+        app:layout_constraintTop_toBottomOf="@id/pokecenter_button"/>
 
 
     <Button
         android:id="@+id/pokecenter_button"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_width="125dp"
+        android:layout_height="125dp"
         android:text="@string/pokecenter_button_string"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/menu_space_3"/>
+        app:layout_constraintRight_toRightOf="@id/selection_layout"
+        app:layout_constraintTop_toTopOf="@id/selection_layout"
+        app:layout_constraintLeft_toRightOf="@id/change_team_button"
+        app:layout_constraintBottom_toTopOf="@id/trainer_battle_button"/>
 
-    <Space
-        android:id="@+id/menu_space_4"
-        android:layout_width="match_parent"
-        android:layout_height="75dp"
-        app:layout_constraintBottom_toTopOf="@id/change_team_button"
-        app:layout_constraintTop_toBottomOf="@id/pokecenter_button"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
 
 
     <Button
         android:id="@+id/change_team_button"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_width="125dp"
+        android:layout_height="125dp"
         android:text="@string/change_team_button_string"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/menu_space_4"/>
+        app:layout_constraintLeft_toLeftOf="@id/selection_layout"
+        app:layout_constraintTop_toTopOf="@id/selection_layout"
+        app:layout_constraintBottom_toTopOf="@id/wild_encounter_button"
+        app:layout_constraintRight_toLeftOf="@id/pokecenter_button"/>
 
-    <Space
-        android:id="@+id/menu_space_5"
-        android:layout_width="match_parent"
-        android:layout_height="75dp"
-        app:layout_constraintBottom_toTopOf="@id/save_button"
-        app:layout_constraintTop_toBottomOf="@id/change_team_button"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
         android:id="@+id/save_button"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="75dp"
         android:text="@string/save_button_string"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/menu_space_5"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/selection_layout"
+        android:layout_marginBottom="50dp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
