finished main battle ui

--- a/app/src/main/res/layout/activity_wild_battle.xml
+++ b/app/src/main/res/layout/activity_wild_battle.xml
@@ -4,15 +4,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.WildBattle">
+    tools:context=".WildBattle">
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/container_fragment"
-        android:name="com.example.pokemon_daws.BattleMenu"
+        android:id="@+id/battle_screen"
+        android:name="com.example.pokemon_daws.fragments.BattleScreen"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/battle_message"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout="@layout/fragment_battle_screen"
+        tools:layout_editor_absoluteX="0dp">
+
+    </androidx.fragment.app.FragmentContainerView>
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/battle_message"
+        android:name="com.example.pokemon_daws.fragments.BattleText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/battle_menu"
+        app:layout_constraintTop_toBottomOf="@+id/battle_screen"
+        tools:layout="@layout/fragment_battle_text" />
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/battle_menu"
+        android:name="com.example.pokemon_daws.fragments.BattleMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout="@layout/fragment_battle_menu" />
+        app:layout_constraintTop_toBottomOf="@+id/battle_message"
+        tools:layout="@layout/fragment_battle_menu"
+        tools:layout_editor_absoluteX="0dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
