--- a/app/src/main/res/layout/fragment_battle_menu.xml
+++ b/app/src/main/res/layout/fragment_battle_menu.xml
@@ -8,46 +8,46 @@
     tools:context=".BattleMenu">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/fight_btn"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:text="@string/fight"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
-        app:layout_constraintEnd_toStartOf="@+id/button2"
+        app:layout_constraintBottom_toTopOf="@+id/pokemon_btn"
+        app:layout_constraintEnd_toStartOf="@+id/item_btn"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/item_btn"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:text="@string/item"
-        app:layout_constraintBottom_toTopOf="@+id/button4"
+        app:layout_constraintBottom_toTopOf="@+id/run_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button"
+        app:layout_constraintStart_toEndOf="@+id/fight_btn"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/pokemon_btn"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:text="@string/pokemon"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button4"
+        app:layout_constraintEnd_toStartOf="@+id/run_btn"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/fight_btn" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/run_btn"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:text="@string/run"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button3"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintStart_toEndOf="@+id/pokemon_btn"
+        app:layout_constraintTop_toBottomOf="@+id/item_btn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
