--- a/app/src/main/res/layout/fragment_battle_menu.xml
+++ b/app/src/main/res/layout/fragment_battle_menu.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".BattleMenu">
+    tools:context=".fragments.BattleMenu">
 
     <Button
         android:id="@+id/fight_btn"
