--- a/app/src/main/res/layout/pokemon_team_item.xml
+++ b/app/src/main/res/layout/pokemon_team_item.xml
@@ -3,63 +3,77 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="16dp">
+    android:padding="5dp"
+    android:layout_marginLeft="20dp">
 
-    <TextView
-        android:id="@+id/pokemon_name"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/name_level_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/bulbasaur"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="@id/pokemon_level" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/sprite_hp_layout">
+        <TextView
+            android:id="@+id/pokemon_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/bulbasaur"
+            app:layout_constraintTop_toTopOf="@id/name_level_layout"
+            app:layout_constraintLeft_toLeftOf="@id/name_level_layout"
+            app:layout_constraintRight_toRightOf="@id/name_level_layout"
+            app:layout_constraintBottom_toBottomOf="@id/name_level_layout"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/pokemon_level"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="5"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/pokemon_name"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/name_level_layout"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/sprite_hp_layout"/>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/sprite_hp_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/name_level_layout"
+        app:layout_constraintBottom_toTopOf="@id/swap_button">
     <TextView
         android:id="@+id/pokemon_hp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="12/20"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/pokemon_sprite"
-        app:layout_constraintBottom_toTopOf="@id/swap_button"/>
+        app:layout_constraintTop_toTopOf="@id/sprite_hp_layout"
+        app:layout_constraintBottom_toBottomOf="@id/sprite_hp_layout"
+        app:layout_constraintRight_toRightOf="@id/sprite_hp_layout"
+        app:layout_constraintLeft_toRightOf="@id/pokemon_sprite"/>
 
     <ImageView
         android:id="@+id/pokemon_sprite"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:src="@drawable/trainer_sprite"
-        app:layout_constraintTop_toTopOf="@id/pokemon_name"
-        app:layout_constraintRight_toLeftOf="@id/pokemon_hp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/stats_button"
-        android:paddingTop="20dp"/>
+        app:layout_constraintTop_toTopOf="@id/sprite_hp_layout"
+        app:layout_constraintLeft_toLeftOf="@id/sprite_hp_layout"
+        app:layout_constraintBottom_toBottomOf="@id/sprite_hp_layout"
+        app:layout_constraintRight_toLeftOf="@id/pokemon_hp"/>
 
-    <Button
-        android:id="@+id/stats_button"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:text="stats"
-        app:layout_constraintTop_toBottomOf="@id/pokemon_sprite"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/swap_button"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
     <Button
         android:id="@+id/swap_button"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
         android:text="swap"
-        app:layout_constraintLeft_toRightOf="@id/stats_button"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/sprite_hp_layout"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
