--- a/app/src/main/res/layout/fragment_battle_screen.xml
+++ b/app/src/main/res/layout/fragment_battle_screen.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".fragments.BattleScreen">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -29,7 +29,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.214"
-            android:contentDescription="Opponent Pokemon Sprite" />
+            android:contentDescription="@string/opponent_sprite_desc" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -60,7 +60,6 @@
         android:layout_width="250dp"
         android:layout_height="100dp"
         android:layout_marginBottom="96dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +73,8 @@
             android:src="@drawable/bulbasaur_starter_sprite"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/trainer_sprite_desc" />
 
         <LinearLayout
             android:id="@+id/linearLayout"
