--- a/app/src/main/res/layout/fragment_battle_screen.xml
+++ b/app/src/main/res/layout/fragment_battle_screen.xml
@@ -9,9 +9,10 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/opponent_screen"
         android:layout_width="250dp"
-        android:layout_height="100dp"
+        android:layout_height="150dp"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="3dp"
+        android:layout_marginBottom="50dp"
         app:layout_constraintBottom_toTopOf="@+id/trainer_screen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -20,8 +21,8 @@
 
         <ImageView
             android:id="@+id/opponent_sprite"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="125dp"
+            android:layout_height="125dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="24dp"
             android:src="@drawable/charmander_starter_sprite"
@@ -58,7 +59,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/trainer_screen"
         android:layout_width="250dp"
-        android:layout_height="100dp"
+        android:layout_height="150dp"
         android:layout_marginBottom="96dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -67,8 +68,8 @@
 
         <ImageView
             android:id="@+id/trainer_sprite"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="125dp"
+            android:layout_height="125dp"
             android:layout_marginStart="24dp"
             android:src="@drawable/bulbasaur_starter_sprite"
             app:layout_constraintBottom_toBottomOf="parent"
