Added potion and pokeball functions to Battle, which are used by ItemsMenu

--- a/app/src/main/res/layout/fragment_items_menu.xml
+++ b/app/src/main/res/layout/fragment_items_menu.xml
@@ -8,18 +8,18 @@
 
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/pkball_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/pokeball"
-        app:layout_constraintBottom_toTopOf="@+id/button6"
+        app:layout_constraintBottom_toTopOf="@+id/potn_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/potn_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/potion"
@@ -27,5 +27,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button5" />
+        app:layout_constraintTop_toBottomOf="@+id/pkball_btn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
