--- a/app/src/main/res/layout/activity_wild_battle.xml
+++ b/app/src/main/res/layout/activity_wild_battle.xml
@@ -11,6 +11,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/load_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:indeterminate="true"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/battle_screen"
         android:layout_width="match_parent"
